--- a/content/css/main.css
+++ b/content/css/main.css
@@ -30,6 +30,7 @@ table {
 
 img {
   border: 0;
+  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   vertical-align: middle; }
@@ -66,7 +67,7 @@ hr {
   padding: 0;
   border: 0;
   border-top: 1px solid #c6d2f5;
-  moz-box-sizing: content-box;
+  -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0; }
 
