--- a/content/css/mixin.scss
+++ b/content/css/mixin.scss
@@ -1,11 +1,20 @@
 @charset "utf-8";
 @mixin border-box {
+  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
+@mixin rotate($deg...) {
+  -webkit-transform: rotate($deg);
+  -moz-transform: rotate($deg);
+  -ms-transform: rotate($deg);
+  -o-transform: rotate($deg);
+  transform: rotate($deg);
+}
+
 @mixin content-box {
-  moz-box-sizing: content-box;
+  -moz-box-sizing: content-box;
   box-sizing: content-box;
 }
 
