--- a/content/css/maga01.scss
+++ b/content/css/maga01.scss
@@ -206,7 +206,7 @@
     background: url("../images/lotus.gif") right no-repeat;
     width: 100%;
     height: 40px;
-    transition: top .5s ease-in-out;
+    transition: top .5s linear;
   }
   .qzy-tree-sub {
     margin-left: 20px;
