--- a/content/css/maga01.css
+++ b/content/css/maga01.css
@@ -149,7 +149,8 @@
   .qzy-catalog .qzy-catalog-nav {
     position: relative;
     width: 160px;
-    height: 588px; }
+    height: 588px;
+    background: url("../images/lotus2.gif") left bottom no-repeat; }
   .qzy-catalog a {
     display: block;
     line-height: 20px;
@@ -163,7 +164,7 @@
     position: absolute;
     top: -8px;
     left: 0;
-    background: url("../images/lotus.gif") right no-repeat;
+    background: url("../images/lotus1.gif") right no-repeat;
     width: 100%;
     height: 40px;
     transition: top .5s linear; }
@@ -179,13 +180,24 @@
   float: left;
   margin-left: 18px;
   width: 800px;
-  height: 600px; }
+  height: 600px;
+  perspective: 2000px;
+  -webkit-perspective: 2000px;
+  -moz-perspective: 2000px;
+  -ms-perspective: 2000px; }
   .qzy-content > div {
     position: absolute;
     width: inherit;
     height: inherit; }
   .qzy-content .qzy-page {
-    background: rgba(255, 255, 255, 0.6) url("../images/loading.png") center no-repeat; }
+    width: 800px;
+    height: 600px;
+    background: rgba(255, 255, 255, 0.6) url("../images/loading.png") center no-repeat;
+    transform-origin: 0 50%;
+    -ms-transform-origin: 0 50%;
+    -webkit-transform-origin: 0 50%;
+    -moz-transform-origin: 0 50%;
+    -o-transform-origin: 0 50%; }
   .qzy-content .page-on {
     z-index: 97;
     left: 0; }
@@ -193,18 +205,18 @@
     z-index: -1; }
   .qzy-content .page-out {
     z-index: 99;
-    -webkit-animation: page-out 0.5s linear;
-    -moz-animation: page-out 0.5s linear;
-    -ms-animation: page-out 0.5s linear;
-    -o-animation: page-out 0.5s linear;
-    animation: page-out 0.5s linear; }
+    -webkit-animation: page-out 0.7s linear;
+    -moz-animation: page-out 0.7s linear;
+    -ms-animation: page-out 0.7s linear;
+    -o-animation: page-out 0.7s linear;
+    animation: page-out 0.7s linear; }
   .qzy-content .page-in {
     z-index: 99;
-    -webkit-animation: page-in 0.5s linear;
-    -moz-animation: page-in 0.5s linear;
-    -ms-animation: page-in 0.5s linear;
-    -o-animation: page-in 0.5s linear;
-    animation: page-in 0.5s linear; }
+    -webkit-animation: page-in 0.7s linear;
+    -moz-animation: page-in 0.7s linear;
+    -ms-animation: page-in 0.7s linear;
+    -o-animation: page-in 0.7s linear;
+    animation: page-in 0.7s linear; }
   .qzy-content .page-out-right {
     z-index: 99;
     -webkit-animation: page-out-right 0.5s linear;
@@ -313,199 +325,389 @@
   100% {
     opacity: 1; } }
 @-webkit-keyframes page-out {
-  0% {
+  /*0% {
     top: 0;
-    left: 0; }
-
+    left: 0;
+  }
   25% {
     top: -20px;
     left: -100px;
-    opacity: .8; }
-
+    opacity: .8;
+  }
   50% {
     top: -50px;
     left: -400px;
-    opacity: .5; }
-
+    opacity: .5;
+  }
   100% {
     top: -60px;
     left: -800px;
+    opacity: 0;
+  }*/
+  0% {
+    -webkit-transform: rotateY(0);
+    -moz-transform: rotateY(0);
+    -ms-transform: rotateY(0);
+    -o-transform: rotateY(0);
+    transform: rotateY(0);
+    opacity: 1; }
+
+  50% {
+    opacity: 1; }
+
+  100% {
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
     opacity: 0; } }
 @-moz-keyframes page-out {
-  0% {
+  /*0% {
     top: 0;
-    left: 0; }
-
+    left: 0;
+  }
   25% {
     top: -20px;
     left: -100px;
-    opacity: .8; }
-
+    opacity: .8;
+  }
   50% {
     top: -50px;
     left: -400px;
-    opacity: .5; }
-
+    opacity: .5;
+  }
   100% {
     top: -60px;
     left: -800px;
+    opacity: 0;
+  }*/
+  0% {
+    -webkit-transform: rotateY(0);
+    -moz-transform: rotateY(0);
+    -ms-transform: rotateY(0);
+    -o-transform: rotateY(0);
+    transform: rotateY(0);
+    opacity: 1; }
+
+  50% {
+    opacity: 1; }
+
+  100% {
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
     opacity: 0; } }
 @-ms-keyframes page-out {
-  0% {
+  /*0% {
     top: 0;
-    left: 0; }
-
+    left: 0;
+  }
   25% {
     top: -20px;
     left: -100px;
-    opacity: .8; }
-
+    opacity: .8;
+  }
   50% {
     top: -50px;
     left: -400px;
-    opacity: .5; }
-
+    opacity: .5;
+  }
   100% {
     top: -60px;
     left: -800px;
+    opacity: 0;
+  }*/
+  0% {
+    -webkit-transform: rotateY(0);
+    -moz-transform: rotateY(0);
+    -ms-transform: rotateY(0);
+    -o-transform: rotateY(0);
+    transform: rotateY(0);
+    opacity: 1; }
+
+  50% {
+    opacity: 1; }
+
+  100% {
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
     opacity: 0; } }
 @-o-keyframes page-out {
-  0% {
+  /*0% {
     top: 0;
-    left: 0; }
-
+    left: 0;
+  }
   25% {
     top: -20px;
     left: -100px;
-    opacity: .8; }
-
+    opacity: .8;
+  }
   50% {
     top: -50px;
     left: -400px;
-    opacity: .5; }
-
+    opacity: .5;
+  }
   100% {
     top: -60px;
     left: -800px;
+    opacity: 0;
+  }*/
+  0% {
+    -webkit-transform: rotateY(0);
+    -moz-transform: rotateY(0);
+    -ms-transform: rotateY(0);
+    -o-transform: rotateY(0);
+    transform: rotateY(0);
+    opacity: 1; }
+
+  50% {
+    opacity: 1; }
+
+  100% {
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
     opacity: 0; } }
 @keyframes page-out {
-  0% {
+  /*0% {
     top: 0;
-    left: 0; }
-
+    left: 0;
+  }
   25% {
     top: -20px;
     left: -100px;
-    opacity: .8; }
-
+    opacity: .8;
+  }
   50% {
     top: -50px;
     left: -400px;
-    opacity: .5; }
-
+    opacity: .5;
+  }
   100% {
     top: -60px;
     left: -800px;
+    opacity: 0;
+  }*/
+  0% {
+    -webkit-transform: rotateY(0);
+    -moz-transform: rotateY(0);
+    -ms-transform: rotateY(0);
+    -o-transform: rotateY(0);
+    transform: rotateY(0);
+    opacity: 1; }
+
+  50% {
+    opacity: 1; }
+
+  100% {
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
     opacity: 0; } }
 @-webkit-keyframes page-in {
-  0% {
+  /*0% {
     top: -60px;
     left: -800px;
-    opacity: 0; }
-
+    opacity: 0;
+  }
   50% {
     top: -50px;
     left: -400px;
-    opacity: .5; }
-
+    opacity: .5;
+  }
   75% {
     top: -20px;
     left: -100px;
-    opacity: .8; }
-
+    opacity: .8;
+  }
   100% {
     top: 0;
     left: 0;
+    opacity: 1;
+  }*/
+  0% {
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
+    opacity: 0; }
+
+  50% {
+    opacity: 1; }
+
+  100% {
+    -webkit-transform: rotateY(0);
+    -moz-transform: rotateY(0);
+    -ms-transform: rotateY(0);
+    -o-transform: rotateY(0);
+    transform: rotateY(0);
     opacity: 1; } }
 @-moz-keyframes page-in {
-  0% {
+  /*0% {
     top: -60px;
     left: -800px;
-    opacity: 0; }
-
+    opacity: 0;
+  }
   50% {
     top: -50px;
     left: -400px;
-    opacity: .5; }
-
+    opacity: .5;
+  }
   75% {
     top: -20px;
     left: -100px;
-    opacity: .8; }
-
+    opacity: .8;
+  }
   100% {
     top: 0;
     left: 0;
+    opacity: 1;
+  }*/
+  0% {
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
+    opacity: 0; }
+
+  50% {
+    opacity: 1; }
+
+  100% {
+    -webkit-transform: rotateY(0);
+    -moz-transform: rotateY(0);
+    -ms-transform: rotateY(0);
+    -o-transform: rotateY(0);
+    transform: rotateY(0);
     opacity: 1; } }
 @-ms-keyframes page-in {
-  0% {
+  /*0% {
     top: -60px;
     left: -800px;
-    opacity: 0; }
-
+    opacity: 0;
+  }
   50% {
     top: -50px;
     left: -400px;
-    opacity: .5; }
-
+    opacity: .5;
+  }
   75% {
     top: -20px;
     left: -100px;
-    opacity: .8; }
-
+    opacity: .8;
+  }
   100% {
     top: 0;
     left: 0;
+    opacity: 1;
+  }*/
+  0% {
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
+    opacity: 0; }
+
+  50% {
+    opacity: 1; }
+
+  100% {
+    -webkit-transform: rotateY(0);
+    -moz-transform: rotateY(0);
+    -ms-transform: rotateY(0);
+    -o-transform: rotateY(0);
+    transform: rotateY(0);
     opacity: 1; } }
 @-o-keyframes page-in {
-  0% {
+  /*0% {
     top: -60px;
     left: -800px;
-    opacity: 0; }
-
+    opacity: 0;
+  }
   50% {
     top: -50px;
     left: -400px;
-    opacity: .5; }
-
+    opacity: .5;
+  }
   75% {
     top: -20px;
     left: -100px;
-    opacity: .8; }
-
+    opacity: .8;
+  }
   100% {
     top: 0;
     left: 0;
+    opacity: 1;
+  }*/
+  0% {
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
+    opacity: 0; }
+
+  50% {
+    opacity: 1; }
+
+  100% {
+    -webkit-transform: rotateY(0);
+    -moz-transform: rotateY(0);
+    -ms-transform: rotateY(0);
+    -o-transform: rotateY(0);
+    transform: rotateY(0);
     opacity: 1; } }
 @keyframes page-in {
-  0% {
+  /*0% {
     top: -60px;
     left: -800px;
-    opacity: 0; }
-
+    opacity: 0;
+  }
   50% {
     top: -50px;
     left: -400px;
-    opacity: .5; }
-
+    opacity: .5;
+  }
   75% {
     top: -20px;
     left: -100px;
-    opacity: .8; }
-
+    opacity: .8;
+  }
   100% {
     top: 0;
     left: 0;
+    opacity: 1;
+  }*/
+  0% {
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
+    opacity: 0; }
+
+  50% {
+    opacity: 1; }
+
+  100% {
+    -webkit-transform: rotateY(0);
+    -moz-transform: rotateY(0);
+    -ms-transform: rotateY(0);
+    -o-transform: rotateY(0);
+    transform: rotateY(0);
     opacity: 1; } }
 @-webkit-keyframes page-out-right {
   0% {
