--- a/content/css/mixin.scss
+++ b/content/css/mixin.scss
@@ -5,12 +5,50 @@
   box-sizing: border-box;
 }
 
+//3D透视
+@mixin perspective($distance) {
+  perspective: $distance;
+  -webkit-perspective: $distance;
+  -moz-perspective: $distance;
+  -ms-perspective: $distance;
+}
+
+@mixin perspective-origin($origin...) {
+  perspective-origin: $origin;
+  -webkit-perspective-origin: $origin;
+  -moz-perspective-origin: $origin;
+  -ms-perspective-origin: $origin;
+}
+
+@mixin preserve-3d {
+  transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+}
+
+@mixin transform-origin($origin...) {
+  transform-origin: $origin;
+  -ms-transform-origin: $origin;
+  -webkit-transform-origin: $origin;
+  -moz-transform-origin: $origin;
+  -o-transform-origin: $origin;
+}
+
 @mixin rotate($deg...) {
   -webkit-transform: rotate($deg);
   -moz-transform: rotate($deg);
   -ms-transform: rotate($deg);
   -o-transform: rotate($deg);
   transform: rotate($deg);
+}
+
+@mixin rotateY($deg...) {
+  -webkit-transform: rotateY($deg);
+  -moz-transform: rotateY($deg);
+  -ms-transform: rotateY($deg);
+  -o-transform: rotateY($deg);
+  transform: rotateY($deg);
 }
 
 @mixin content-box {
