--- a/admin/css/admin.scss
+++ b/admin/css/admin.scss
@@ -14,6 +14,29 @@ h2 {
     position: relative;
     overflow: hidden;
   }
+  .caption {
+    text-align: center;
+  }
+}
+
+.cat-list {
+  ul {
+    margin: 10px 0 0 15px;
+    padding: 0;
+    list-style: none;
+    li {
+      padding: 5px 0;
+    }
+  }
+}
+
+.page-chk {
+  position: absolute;
+}
+
+.page-opr {
+  position: relative;
+  top: -5px;
 }
 
 .page-focus {
