--- a/content/css/main.css
+++ b/content/css/main.css
@@ -32,8 +32,7 @@ img {
   border: 0;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  vertical-align: middle; }
+  box-sizing: border-box; }
 
 em,
 th {
@@ -352,3 +351,5 @@ a {
 
 .qzy-align-right {
   text-align: right; }
+
+/*# sourceMappingURL=main.css.map */
