--- a/content/css/mixin.scss
+++ b/content/css/mixin.scss
@@ -1,4 +1,5 @@
 @charset "utf-8";
+
 @mixin border-box {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -116,4 +117,11 @@
   background-image: -webkit-linear-gradient( 90deg, $ecolor 0%, $scolor 100%);
   background-image: -ms-linear-gradient( 90deg, $ecolor 0%, $scolor 100%);
   @include shadow(0px 1px 0px $shadow);
+}
+
+@mixin translateX($px) {
+  -webkit-transform: translateX($px);
+  -moz-transform: translateX($px);
+  -ms-transform: translateX($px);
+  transform: translateX($px);
 }
